style: Apply glassmorphism theme to find rooms page for consistent UI design

--- a/src/main/webapp/search_app.html
+++ b/src/main/webapp/search_app.html
@@ -3,50 +3,205 @@
 <head>
   <meta charset="UTF-8">
   <title>Find Rooms</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
-    body { background: #f4f6f7; padding: 30px; font-family: 'Segoe UI', sans-serif; }
-    .container { max-width: 1000px; margin: 0 auto; }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
-    /* Header */
-    .header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
-    h2 { color: #2c3e50; }
-    a { text-decoration: none; color: #7f8c8d; font-weight: bold; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      padding: 40px;
+      color: white;
+    }
 
-    /* Search Bar */
-    .search-bar { display: flex; gap: 15px; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); margin-bottom: 30px; align-items: flex-end; }
-    .field-group { flex: 1; }
-    label { display: block; font-size: 12px; font-weight: bold; color: #7f8c8d; margin-bottom: 5px; text-transform: uppercase; }
-    input { width: 100%; padding: 12px; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box; font-size: 14px; }
-    button { background: #3498db; color: white; border: none; padding: 12px 25px; border-radius: 4px; cursor: pointer; font-weight: bold; font-size: 14px; height: 42px; }
-    button:hover { background: #2980b9; }
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+    }
 
-    /* Results Grid */
-    #results { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 25px; }
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 30px;
+      border-bottom: 1px solid rgba(255,255,255,0.2);
+      padding-bottom: 15px;
+    }
 
-    /* Room Card */
-    .room-card { background: white; border-radius: 8px; overflow: hidden; box-shadow: 0 3px 10px rgba(0,0,0,0.1); transition: transform 0.2s; border: 1px solid #eee; display: flex; flex-direction: column; }
-    .room-card:hover { transform: translateY(-5px); box-shadow: 0 8px 20px rgba(0,0,0,0.15); }
+    h2 {
+      font-weight: 500;
+    }
 
-    .room-img { width: 100%; height: 200px; object-fit: cover; background: #ecf0f1; }
+    a {
+      text-decoration: none;
+      color: #1abc9c;
+      font-weight: 600;
+    }
 
-    .card-body { padding: 20px; flex: 1; display: flex; flex-direction: column; }
-    .card-top { display: flex; justify-content: space-between; align-items: start; margin-bottom: 10px; }
-    .room-title { font-size: 1.2em; font-weight: bold; color: #2c3e50; margin: 0; }
-    .room-type { background: #ecf0f1; color: #7f8c8d; padding: 3px 8px; border-radius: 12px; font-size: 0.8em; font-weight: bold; text-transform: uppercase; }
+    a:hover {
+      text-decoration: underline;
+    }
 
-    .description { color: #666; font-size: 0.9em; line-height: 1.5; margin-bottom: 20px; flex: 1; }
+    .search-bar {
+      display: flex;
+      gap: 20px;
+      backdrop-filter: blur(12px);
+      background: rgba(255,255,255,0.08);
+      border: 1px solid rgba(255,255,255,0.2);
+      padding: 25px;
+      border-radius: 16px;
+      margin-bottom: 40px;
+      align-items: flex-end;
+      flex-wrap: wrap;
+    }
 
-    .card-footer { display: flex; justify-content: space-between; align-items: center; border-top: 1px solid #f4f4f4; padding-top: 15px; margin-top: auto; }
-    .price { color: #27ae60; font-weight: bold; font-size: 1.4em; }
-    .per-night { font-size: 0.5em; color: #95a5a6; font-weight: normal; }
+    .field-group {
+      flex: 1;
+      min-width: 200px;
+    }
 
-    .book-btn { background: #27ae60; color: white; border: none; padding: 8px 20px; border-radius: 20px; cursor: pointer; font-weight: bold; transition: 0.2s; }
-    .book-btn:hover { background: #219150; }
+    label {
+      display: block;
+      font-size: 12px;
+      font-weight: bold;
+      margin-bottom: 6px;
+      text-transform: uppercase;
+      opacity: 0.8;
+    }
+
+    input {
+      width: 100%;
+      padding: 12px;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+    }
+
+    input:focus {
+      box-shadow: 0 0 5px rgba(255,255,255,0.4);
+    }
+
+    button {
+      background: #3498db;
+      color: white;
+      border: none;
+      padding: 12px 25px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 600;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background: #2980b9;
+      transform: translateY(-2px);
+    }
+
+    #results {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      gap: 30px;
+    }
+
+    .room-card {
+      backdrop-filter: blur(12px);
+      background: rgba(255,255,255,0.08);
+      border: 1px solid rgba(255,255,255,0.2);
+      border-radius: 16px;
+      overflow: hidden;
+      transition: 0.3s;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .room-card:hover {
+      transform: translateY(-6px);
+      background: rgba(255,255,255,0.15);
+    }
+
+    .room-img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      background: rgba(255,255,255,0.1);
+    }
+
+    .card-body {
+      padding: 20px;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .card-top {
+      display: flex;
+      justify-content: space-between;
+      align-items: start;
+      margin-bottom: 10px;
+    }
+
+    .room-title {
+      font-size: 1.1em;
+      font-weight: 600;
+    }
+
+    .room-type {
+      background: rgba(255,255,255,0.2);
+      padding: 4px 10px;
+      border-radius: 12px;
+      font-size: 0.75em;
+      text-transform: uppercase;
+    }
+
+    .description {
+      font-size: 0.9em;
+      opacity: 0.85;
+      margin-bottom: 20px;
+      flex: 1;
+    }
+
+    .card-footer {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-top: 1px solid rgba(255,255,255,0.1);
+      padding-top: 15px;
+    }
+
+    .price {
+      color: #2ecc71;
+      font-weight: bold;
+      font-size: 1.3em;
+    }
+
+    .per-night {
+      font-size: 0.6em;
+      opacity: 0.7;
+    }
+
+    .book-btn {
+      background: #27ae60;
+      padding: 8px 20px;
+      border-radius: 20px;
+      font-size: 14px;
+    }
+
+    .book-btn:hover {
+      background: #1e8449;
+    }
+
+    @media(max-width: 768px) {
+      body { padding: 20px; }
+      .header { flex-direction: column; align-items: flex-start; gap: 15px; }
+    }
   </style>
 </head>
+
 <body>
 
 <div class="container">
+
   <div class="header">
     <h2>Find Available Rooms</h2>
     <a href="receptionist_dashboard.html">&larr; Back to Dashboard</a>
@@ -61,24 +216,24 @@
       <label>Check-Out Date</label>
       <input type="date" id="checkOut">
     </div>
-    <button onclick="searchRooms()">SEARCH ROOMS</button>
+    <button onclick="searchRooms()">Search Rooms</button>
   </div>
 
   <div id="results">
-    <p style="grid-column: 1/-1; text-align: center; color: #95a5a6; padding: 40px;">Select dates to browse our collection.</p>
+    <p style="grid-column: 1/-1; text-align: center; opacity: 0.7; padding: 40px;">
+      Select dates to browse available rooms.
+    </p>
   </div>
+
 </div>
 
 <script>
-  // --- DATE CONSTRAINTS ---
   window.onload = function() {
     const checkIn = document.getElementById('checkIn');
     const checkOut = document.getElementById('checkOut');
     const today = new Date().toISOString().split('T')[0];
-
     checkIn.setAttribute('min', today);
     checkOut.setAttribute('min', today);
-
     checkIn.addEventListener('change', function() {
       if (this.value) {
         const selectedDate = new Date(this.value);
@@ -106,28 +261,27 @@
       results.innerHTML = "";
 
       if (rooms.length === 0) {
-        results.innerHTML = '<p style="grid-column: 1/-1; text-align: center; color: #e74c3c;">No rooms available for these dates.</p>';
+        results.innerHTML = '<p style="grid-column: 1/-1; text-align: center; color: #ff6b6b;">No rooms available for these dates.</p>';
       } else {
         rooms.forEach(r => {
           results.innerHTML += `
-                        <div class="room-card">
-                            <img src="${r.image}" class="room-img" alt="Room Image">
-                            <div class="card-body">
-                                <div class="card-top">
-                                    <h3 class="room-title">Room ${r.number}</h3>
-                                    <span class="room-type">${r.type}</span>
-                                </div>
-                                <p class="description">${r.description}</p>
-                                <div class="card-footer">
-                                    <div class="price">$${r.price}<span class="per-night">/night</span></div>
-                                    <button class="book-btn" onclick="bookRoom(${r.id}, '${r.number}', ${r.price})">Book Now</button>
-                                </div>
-                            </div>
-                        </div>`;
+            <div class="room-card">
+              <img src="${r.image}" class="room-img" alt="Room Image">
+              <div class="card-body">
+                <div class="card-top">
+                  <h3 class="room-title">Room ${r.number}</h3>
+                  <span class="room-type">${r.type}</span>
+                </div>
+                <p class="description">${r.description}</p>
+                <div class="card-footer">
+                  <div class="price">$${r.price}<span class="per-night">/night</span></div>
+                  <button class="book-btn" onclick="bookRoom(${r.id}, '${r.number}', ${r.price})">Book Now</button>
+                </div>
+              </div>
+            </div>`;
         });
       }
     } catch (e) {
-      console.error(e);
       results.innerHTML = '<p style="grid-column: 1/-1; text-align: center; color: red;">Error fetching data.</p>';
     }
   }
